git-svn-id: http://www.xerial.org/svn/project/XerialJ/trunk/sqlite-jdbc@2850 ae02f08e-27ec-0310-ae8c-8ba02fe2eafd